@@ -1,3 +1,6 @@
+Changelog v5.1.80 (2024-03-21):
+- Fixed some Watchlist Sorting Bugs
+
 Changelog v5.1.79 (2024-03-15):
 - Fixed Resolution again
 
